--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "http-status": "^1.7.4",
     "joi": "^17.13.1",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.1",
