--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -28,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
@@ -37,6 +39,7 @@
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.11.10",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
