--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "validator": "^13.12.0",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.8",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.11.10",
